chore: checkpoint before modular refactor